--- a/package.json
+++ b/package.json
@@ -11,26 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
+    "@angular/animations": "^10.0.14",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
+    "@angular/fire": "^6.0.4",
     "@angular/forms": "~10.0.11",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@nebular/eva-icons": "^6.2.1",
+    "@nebular/theme": "^6.2.1",
+    "angularfire2": "^5.4.2",
+    "bootstrap": "^4.5.3",
+    "eva-icons": "^1.1.3",
+    "firebase": "^7.0.0 || ^8.0.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
+    "shortid": "^2.2.16",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "@angular-devkit/build-angular": "~0.1000.7",
     "@angular/cli": "~10.0.7",
     "@angular/compiler-cli": "~10.0.11",
-    "@types/node": "^12.11.1",
+    "@schematics/angular": "~10.0.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -38,6 +54,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "open": "^7.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
